# NestAndWhisk

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  railway.json  railway.project-variables.json  tailwind.config.js  vite.config.js
apps/accounts/: admin.py  allauth_urls.py  forms.py  managers.py  models.py  test_auth_rendering.py  urls.py  views.py
apps/api/: apps.py  models.py  serializers.py  test_api_endpoints.py  urls.py  views.py
apps/blog/: admin.py  models.py  urls.py  views.py
apps/cart/: admin.py  apps.py  context_processors.py  forms.py  models.py  services.py  test_rendering.py  urls.py  views.py
apps/catalog/: admin.py  apps.py  forms.py  models.py  test_product_detail_rendering.py  urls.py  views.py
apps/checkout/: apps.py  emailing.py  forms.py  models.py  phonepe.py  services.py  shiprocket.py  tasks.py  test_checkout_flow.py  test_currency_rendering.py  test_emailing.py  test_phonepe.py  test_shiprocket_lookup.py  urls.py  views.py
apps/core/: admin.py  apps.py  branding.py  cache.py  context_processors.py  delivery.py  forms.py  mail.py  models.py  services.py  signals.py  sitemaps.py  test_admin_rendering.py  test_async_email.py  test_branding.py  test_currency_formatting.py  test_delivery.py  test_faq_chatbot.py  test_storefront_rendering.py  urls.py  views.py
apps/corporate/: admin.py  apps.py  forms.py  models.py  urls.py  (+1 more)
backups/: local_dump.json  postgres_pre_import.json  sqlite_export.json
config/: celery.py  urls.py
gallery-slider-demo/: package.json
nest_and_whisk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
requirements/: base.txt  dev.txt  prod.txt
templates/: base.html
(+102 files in other folders)
